# harp-regulator

./: .editorconfig  .gitignore  HarpRegulator.sln  README.md  THIRD-PARTY-NOTICES.md
docs/: IdentifyingHarpDevices.md  README.md
src/Harp.Devices/: Device.cs  DeviceConfidence.cs  DeviceFilterExtensions.cs  DeviceKind.cs  DeviceState.cs  DriverHelper.cs  Extensions.cs  Harp.Devices.csproj  HarpVersion.cs  LinuxDeviceEnumerator.cs  UsbIds.cs  WindowsDeviceEnumerator.cs
src/Harp.Devices.Tests/: DeviceTests.cs  Harp.Devices.Tests.csproj
src/Harp.Protocol/: CommonRegister.cs  FirmwareUpdateCapabilities.cs  Harp.Protocol.csproj  HarpConnection.cs  HarpMessage.cs  HarpMessageParser.cs  HarpTimestamp.cs  MessageType.cs  PayloadType.cs
src/HarpRegulator/: ColoredConsoleTraceListener.cs  CommandBase.cs  CommandResult.cs  HarpRegulator.csproj  HelpCommand.cs  InspectCommand.cs  InstallDriversCommand.cs  ListDevicesCommand.cs  Program.cs  ProgressBar.cs  UploadFirmwareCommand.SwitchToBootloader.cs  UploadFirmwareCommand.VerifyFirmwareCompatibility.cs  UploadFirmwareCommand.cs  Utilities.cs
src/PicobootConnection/: PicoSysInfoFlags.cs  Picoboot.cs  PicobootCommandFailureException.cs  PicobootConnection.csproj  PicobootInfoType.cs  PicobootReboot2Flags.cs  build-native.cmd  build-native.sh  memory_type.cs  model_t.cs  picoboot_cmd_status.cs  picoboot_device_result.cs  picoboot_exclusive_type.cs  picoboot_get_info_cmd.cs  picoboot_otp_cmd.cs  picoboot_reboot2_cmd.cs  (+2 more)
src/PicobootConnection/Native/: CMakeLists.txt  PicobootConnection.cpp  flash_id_bin.h  picoboot_connection.c
(+57 files in other folders)
